dashboard/ingressdash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ako.vmware.com/enable-tls: "true"
  name: dashb
  namespace: kubernetes-dashboard
spec:
  ingressClassName: avi-lb
  rules:
  - host: dashb.az45.avilab.top
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
#  tls:
#  - hosts:
#  - dashb.az45.avilab.top
#    secretName: kubernetes-dashboard-certs
